# T2I_Interp_toolkit

./: .gitignore  .pre-commit-config.yaml  DEBIASING_FIX_GUIDE.md  DEBUGGING_CHECKLIST.md  FIXED_analyze_function.py  FIXED_debias_hook.py  INSTALL.md  LICENSE  Makefile  README.md  check_analysis_aggregation.py  corrected_debias_hook.py  ethnicity_debiasing_results.json  eval.py  pyproject.toml  ray_runner.py  readme.md  reproduce_sae_logic.py  requirements.txt  test_steering_direction.py  train_config.py
baselines/: README.md
baselines/fairface_scripts/: calc_unif.py  make_img_csv.py  predict.py
bash/: run_caa_macro_sweep_sdxl.sh  run_caa_macro_sweep_sdxl_turbo.sh  run_localisation_jobs.sh  run_loreft_macro_sweep.sh  run_loreft_macro_sweep_sdxl.sh  run_loreft_macro_sweep_sdxl_turbo.sh  run_loreft_sweep.sh  run_steer_sweep.sh  run_stitch_dmd2_sweep.sh
config/: CLIPEncoder.yaml  FluxSingleTransformerBlock.yaml  FluxTransformer2DModel.yaml  FluxTransformerBlock.yaml  T5EncoderModel.yaml  _hydra_config.py  const.yaml  mapper.yaml  schema.yaml  unet.yaml  wandb.yaml
config/localisation/: run.yaml
config/sae/: run.yaml
config/steer/: run.yaml
config/stitch/: run.yaml
debias_dataset/: create_dataset.py  dataset_analysis.ipynb  parse_input_out_batches.py  poll_and_download.py
dictionary_learning/: __init__.py
dictionary_learning/dictionary_learning/: __init__.py  activault_s3_buffer.py  buffer.py  dictionary.py  evaluation.py  grad_pursuit.py  interp.py  pytorch_buffer.py  training.py  utils.py
dictionary_learning/tests/: test_end_to_end.py  test_pytorch_end_to_end.py
examples/: sae_edit_example.py
hooked_modules/: hooked_attention.py
notebooks/: README.md  case_study_mapping.ipynb  dataset.ipynb  debiasing-t2i.ipynb  debiasing.ipynb  image_conditioning_random_templates.ipynb  image_conditioning_steering.ipynb  load_model.ipynb  sae.ipynb  sae_exploration.ipynb  stitch.ipynb  walkthrough-2.ipynb  walkthrough.ipynb
reporting/: base.py  config_loader.py  wandb.py
scripts/: clip_encoder_train_cfg.yaml  infer_pipeline.py  infer_pipeline.sh  run_localisation.py  run_sae.py  run_steer.py  run_stitch.py  run_workflow.py  run_workflow.sh  train_pipeline.py  train_pipeline.sh  unet_train_cfg.yaml
t2Interp/: T2I.py  __init__.py  accessors.py  blocks.py  cads.py  clip_encoder.py  concept_search.py  dictionary.py  flux_dual_stream_block.py  flux_single_stream_block.py  flux_transformer2D_model.py  intervention.py  mapper.py  sae.py  sae_edit.py  seed_atlas.py  stitch.py  t5_encoder.py  unet.py
t2i_interp/: build_sae.py  cli.py  intervention.py  linear_steering.py  loreft.py  mapper.py  sae.py  stitch.py  t2i.py
t2i_interp/accessors/: accessor.py  blocks.py
t2i_interp/config/: _hydra_config.py  mapper_training_config.yaml  modules_to_pick.yaml  wandb.yaml
t2i_interp/hooks/: attention.py
t2i_interp/reporting/: base.py  config.yaml  config_loader.py  sweep_reports.py  wandb.py  wandb_callback.py
t2i_interp/scripts/: infer_pipeline.py  run_localisation.py  run_sae.py  run_steer.py  run_stitch.py
t2i_interp/utils/: concept_detection.py  generic.py  image_ops.py  inference.py  metrics.py  nethook.py  output.py  output_manager.py  patch_function.py  plot.py  runningstats.py  text_image_buffer.py  text_img_util.py  trace.py  training.py  utils.py  viz.py
tests/: __init__.py  conftest.py  verify_dynamic_unet.py  verify_tuple_detection.py
tests/integration/: __init__.py  test_sae_integration.py  test_training_pipeline.py
tests/unit/: __init__.py  test_accessors.py  test_hydra_sweep.py  test_interventions.py  test_mapper.py  (+9 more)
utils/: buffer.py  concept_detection.py  config_loader.py  image_ops.py  inference.py  metrics.py  output.py  output_manager.py  registry.py  renormalize.py  replace_module.py  runningstats.py  text_image_buffer.py  text_img_util.py  training.py  utils.py  viz.py
(+33 files in other folders)
