[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "t2i-interp-toolkit"
version = "0.1.0"
description = "Text-to-Image Interpretation Toolkit with SAE-based analysis and steering"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Luka", email = "luka@example.com"}
]
keywords = ["diffusion", "interpretability", "SAE", "steering", "text-to-image", "sparse-autoencoders"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "diffusers>=0.34.0",
    "transformers>=4.55.0",
    "torch>=2.0.0",
    "accelerate>=1.10.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "wandb>=0.15.0",
    "datasets>=2.14.0",
    "zstandard>=0.21.0",
    "pyyaml>=6.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
]
ray = [
    "ray>=2.7.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
t2i-steer     = "scripts.run_steer:main"
t2i-stitch    = "scripts.run_stitch:main"
t2i-sae       = "scripts.run_sae:main"
t2i-localise  = "scripts.run_localisation:main"

[project.urls]
Homepage = "https://github.com/yourusername/T2I_Interp_toolkit"
Repository = "https://github.com/yourusername/T2I_Interp_toolkit"
Issues = "https://github.com/yourusername/T2I_Interp_toolkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["t2i_interp", "dictionary_learning", "scripts", "config"]

[tool.hatch.build.targets.wheel.force-include]
# Ensure __init__.py stubs are included in config subpackages
"config/__init__.py"            = "config/__init__.py"
"scripts/__init__.py"           = "scripts/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "E741",  # ambiguous variable name
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*.py" = ["B011", "N802"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dictionary_learning.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=t2i_interp",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
